# registry-pattern

./: .gitignore  CHANGELOG.md  Doxyfile  LICENSE  README.md  deneme_keycls.py  deploy.sh  mkdocs.yml  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  torch_device.py  validator.py
.github/workflows/: build.yml  ci.yml  docs.yml
benchmarks/: deep_build.py
docs/: MIGRATION_cofinn.md  README.md  SETUP.md
docs/autodoc/: Makefile  README.md
docs/autodoc/source/: conf.py  index.rst  modules.rst  registry.rst
docs/guides/: ARCHITECTURE.md  EXAMPLES.md  FACTORIZATION_PATTERN.md  GETTING_STARTED.md  INDEX.md  README.md  STORAGE_BACKENDS.md  VALIDATION_ERROR_HANDLING.md
examples/: 01_registry_basics.py  02_factory_pattern.py  02_factory_pipeline.py  03_custom_reporters.py  03_di_container.py  04_one_liner_methods.py  04_pytorch_mnist.py  05_full_experiment_config.py  05_registry_tree_stress.py  06_factory_pipeline.py  06_torch_profiler_meter.py  08_cofinn_pattern.py  basic_usage.py  claude_example.py  comprehensive_demo.py  config.yaml  full_training_pipeline.py  saved_config.yaml  simple_demo.py  sync_example.py  tests.py
factory_examples/: advanced_example.py  usage_example.py
pydantic_pytorch/: __init__.py  utilizations.py  utils.py
pydantic_pytorch/_schema/: __init__.py  pytorch_schema.py  torch_device.py  torch_dtype.py
pydantic_pytorch/annotations/: __init__.py  torch_tensor.py
pydantic_pytorch/annotations/multiarray/: base.py  profiler.py  torch_device.py  (+2 more)
pydantic_pytorch/api/: schema.py  source_types.py  validators.py
pydantic_pytorch/constructions/: __init__.py  base.py  construction.py
pydantic_pytorch/models/: base.py  class_registry.py  construction.py
pydantic_pytorch/patterns/: __init__.py  mypy_class_registry.py  test.py  test_class_registry.py
pydantic_pytorch/registrations/: registry.py
pydantic_pytorch/registry/: __init__.py  registry.py  tracker.py
pydantic_pytorch/typing/: torch_tensor.py
pydantic_pytorch/utils/: _types.py
pydantic_pytorch/validators/: __init__.py
registry/: .myrsyncbackup  __init__.py  __main__.py  _dev_utils.py  _pydantic.py  _typing_compat.py  _validator.py  _version.py  annotations.py  api.py  base.py  cfg_registry.py  cls_registry.py  construction.py  container.py  engines.py  factory.py  fnc_registry.py  func_registry.py  markers.py  meters.py  obj_conf_map.py  obj_deletage.py  obj_extra.py  obj_registry.py  obj_tracker.py  observers.py  registry.py  remote_storage.py  reporters.py  sch_registry.py  schema.py  storage.py  typ_registry.py  type_guard.py  utils.py  validators.py
registry/array_types/: extra_types copy.py  tensor.py
registry/core/: __init__.py  _dev_utils.py  _validator.py  cfg_registry.py  fnc_registry.py  memory_optimized.py  obj_registry.py  typ_registry.py
registry/experimental/: __init__.py  torch_compat.py
registry/extra/: __init__.py  cfg_registry.py  obj_conf_map.py  obj_deletage.py  obj_registry.py  obj_tracker.py
registry/mixin/: __init__.py  accessor.py  factorizor.py  mutator.py  validator.py
registry/plugins/: __init__.py  base.py  caching_plugin.py  cli_plugin.py  observability_plugin.py  pydantic_plugin.py  remote_plugin.py  serialization_plugin.py
registry/utils/: __init__.py  _dev_utils.py  _validator.py  api.py  base.py
tests/: __init__.py  conftest.py  pydantic_pytorch  test_class_registry.py  test_coverage.py  test_coverage_extra.py  test_di_container.py  test_factory.py  test_factory_pattern.py  test_integration.py  test_markers.py  test_meters.py  test_nested_envelopes.py  test_observers.py  test_registry_pattern.py  test_repo_tree.py  test_reporters.py  test_schema.py  test_torch_compat.py  test_torch_device copy.py  test_torch_device.py  test_torch_dtype.py  test_torch_models.py  test_torch_shape.py  test_torch_tensor.py  test_typ_registry.py  test_type_guard.py  test_validators.py
tests/factory/: example.py  first_example.py  fnc_factory.py  second_example.py  typ_factory.py
tests/property_based/: test_registry_properties.py  test_simple_properties.py
tests/resources/: foo.json  foo.xml
tests/test_core/: test_cfg_registry.py  test_fnc_registry.py  test_obj_registry.py  test_typ_registry.py
tests/test_fnc_regsitry/: test_fnc_registry.py  test_fnc_registry_strict.py
tests/test_mixin/: test_dev_utils.py  test_mixins.py  test_validator.py
tests/test_obj_registry/: test_obj_conf_map.py  test_obj_registry.py
tests/test_registry/: test_class_registry.py  test_registry.py
tests/test_schema/: test_torch_device.py  test_torch_shape.py
tests/test_typ_registry/: test_typ_registry.py  test_typ_registry_base.py  test_typ_registry_strict.py
tests/test_utils/: test_utils_validator.py
(+25 files in other folders)
